<resources>
    <string name="more">more</string>
    <string name="profile">profile</string>
    <string name="sign_up_for_an_account">Sign up for an account</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_for_top_top">Sign up for TopTop</string>
    <string name="create_a_profile">Create a profile follow other accounts, make your own videos, and more.</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="use_phone_or_email">Use phone or email</string>
    <string name="continue_with_google">Continue with google</string>
    <string name="by_continue"><![CDATA[By continuing, you agree to TopTop\'s <b>Term of Service</b><br>and confirm that you have read TopTop\'s <b>Privacy Policy</b>.]]></string>
    <string name="already_have_account"><![CDATA[Already have an account? <b>Log in</b>]]></string>
    <string name="dont_have_account"><![CDATA[Don\'t have an account? <b>Sign up</b>]]></string>
    <string name="log_in_to_toptop">Log in to TopTop</string>
    <string name="log_in_description">Manage your account, check notification, comment on videos, and more.</string>
    <string name="use_phone_email_username">User phone  / email / username</string>
    <string name="title_home">home</string>
    <string name="discover">discover</string>
    <string name="inbox">inbox</string>
    <string name="implement_later">Not implement yet!</string>
    <string name="fail_register">Register Fail!</string>
    <string name="log_out">Log out</string>
    <string name="anchor_name">\@%s</string>
    <string name="setting_and_privacy">Settings and privacy</string>
    <string name="about">About</string>
    <string name="term_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="settings">Settings</string>
    <string name="app_version">v%1$s(%2$d)</string>
    <string name="request_permission_title">%s need permission to record</string>
    <string name="request_permission_one">Please allow camera and microphone access under app permission settings.</string>
    <string name="grant_permissions">Grant permissions</string>
    <string name="flip">Flip</string>
    <string name="filters">Filters</string>
    <string name="beautify">Beautify</string>
    <string name="timer">Timer</string>
    <string name="flash">Flash</string>
    <string name="upload">Upload</string>
    <string name="sounds">Sounds</string>
    <string name="stop_record">Stop recording</string>
    <string name="pause_recording">Pause recording</string>
    <string name="start_recording">Start recording</string>
    <string name="finish_recording">Finish recording</string>
    <string name="discard_current_sound">Discard current sound and recording progress?</string>
    <string name="discard">Discard</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="play_video">Play video</string>
</resources>