<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/btnClose"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="8dp"
        android:src="@drawable/ic_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/layout_register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/registerSheetHeight"
        android:gravity="center|top"
        android:orientation="vertical"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/btnClose">

        <TextView
            style="@style/AppTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/sign_up_for_top_top"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/create_a_profile"
            android:textSize="13sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFacebook"
            style="@style/AppWhiteButton"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/continue_with_facebook"
            android:textAllCaps="false"
            app:icon="@drawable/com_facebook_button_icon"
            app:iconGravity="start"
            app:iconPadding="12dp"
            app:iconSize="16dp"
            app:iconTint="@color/com_facebook_blue" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGoogle"
            style="@style/AppWhiteButton"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/continue_with_google"
            android:textAllCaps="false"
            app:icon="@drawable/common_google_signin_btn_icon_dark"
            app:iconGravity="start"
            app:iconPadding="12dp"
            app:iconSize="16dp"
            app:iconTint="@android:color/transparent"
            app:iconTintMode="add" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEmail"
            style="@style/AppWhiteButton"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/use_phone_or_email"
            android:textAllCaps="false"
            app:icon="@drawable/ic_user"
            app:iconGravity="start"
            app:iconPadding="12dp"
            app:iconSize="16dp"
            app:iconTint="@android:color/transparent"
            app:iconTintMode="add" />

        <TextView
            android:id="@+id/tvPolicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:gravity="center"
            android:text="@string/by_continue"
            android:textSize="11sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/alreadyHaveAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/browser_actions_bg_grey"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/already_have_account"
        app:layout_constraintTop_toBottomOf="@id/layout_register" />

</androidx.constraintlayout.widget.ConstraintLayout>