<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbarHeight"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_back">

            <TextView
                android:id="@+id/toolBarText"
                style="@style/AppTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/setting_and_privacy" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/layoutSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:text="@string/about"
                android:textAllCaps="true"
                android:textColor="@color/iconColor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvTerm"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:text="@string/term_service"
                app:drawableStartCompat="@drawable/ic_term" />

            <TextView
                android:id="@+id/tvPrivacy"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:text="@string/privacy_policy"
                app:drawableStartCompat="@drawable/ic_privacy" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/iconColor" />

            <TextView
                android:id="@+id/btnLogOut"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:text="@string/log_out"
                app:drawableStartCompat="@drawable/ic_log_out" />

            <TextView
                android:id="@+id/version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_version"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>